# TeamsExportPortableWithAttachments

./: .gitignore  .snyk  README.md  VERSION.txt  export-mac.command  export-windows.bat  generate-html-windows.bat  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  scorecard.yml
Teams Export.app/Contents/: Info.plist
Teams Export.app/Contents/MacOS/: run
src/msteams_export/: __init__.py  attachment_policy.py  attachment_stats.py  bundle_paths.py  cli.py  config.py  export_bundle.py  models.py  polite_mode.py
src/msteams_export/archive/: generate.py
src/msteams_export/browser/: __init__.py  detection.py  session.py
src/msteams_export/exporters/: __init__.py  attachment_mirror.py  json_export.py  teams_browser.py  teams_chat.py  teams_conversations.py
src/msteams_export/parsing/: __init__.py  teams_api.py  teams_conversations.py  teams_graph.py
src/msteams_export/viewer/: __init__.py  image_preview.py  render.py
src/msteams_export/webapp/: __init__.py  attachments.py  server.py
