[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "msteams-export"
version = "0.3.0"
description = "Python-first CLI for exporting Microsoft Teams web chat data, with inline chat images."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Martin Rysavy and Codex" },
]
dependencies = []

[project.optional-dependencies]
browser = [
  "playwright>=1.53",
]
viewer = [
  "rich>=14.0.0",
  "textual>=3.7.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.11.0",
  "mypy>=1.10.0",
]

[project.scripts]
teams-export = "msteams_export.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"msteams_export.archive" = ["credit_egg.png"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["msteams_export"]
